# ItsMariusBC

./: .gitignore  Cargo.toml  README.md
.github/: LICENSE
.github/workflows/: update.yaml
cv/: profile-data.json
src/: config.rs  format.rs  main.rs  perfs.rs  query_count.rs
src/cache/: builder.rs  mod.rs
src/github/: age.rs  commits.rs  counter.rs  followers.rs  loc.rs  mod.rs  queries.rs  request.rs  stars.rs
src/svg/: mod.rs  write.rs
