[package]
name = "itsmariusbc-readme"
version = "0.1.0"
edition = "2021"
description = "GitHub profile README stats generator (Rust port)"

[[bin]]
name = "itsmariusbc-readme"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
anyhow = "1"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
